@startuml

title __GUI's Class Diagram__\n

  namespace  {
    namespace UI {
      class GUI.ConsultTablePanel {
          ~ myTable : JTable
          {static} ~ wrongPass : JLabel
          + ConsultTablePanel()
          {static} + bothUnavailable()
          + decryptor()
          + imageNoteViewer()
          + rowClickAction()
          + updateTable()
          {static} + wrongPassVisible()
      }
    }
  }
  

  namespace  {
    namespace UI {
      class GUI.ConsultationInformationViewer {
          + ConsultationInformationViewer()
          {static} - arrayToPanel()
      }
    }
  }
  

  namespace  {
    namespace UI {
      class GUI.ConsultationTableModel {
          - columnNames : String[]
          - consultationList : ArrayList<Consultation>
          + ConsultationTableModel()
          + getColumnCount()
          + getColumnName()
          + getRowCount()
          + getValueAt()
      }
    }
  }
  

  namespace  {
    namespace UI {
      class GUI.DoctorTableModel {
          {static} ~ availabiliy : boolean
          - columnNames : String[]
          - docList : ArrayList<Doctor>
          + DoctorTableModel()
          + getColumnCount()
          + getColumnName()
          + getRowCount()
          + getValueAt()
      }
    }
  }
  

  namespace  {
    namespace UI {
      class GUI.DoctorTablePanel {
          {static} ~ consultArr : ArrayList<Consultation>
          ~ doctorTable : JTable
          {static} ~ pickedEndTime : LocalDateTime
          {static} ~ pickedStartTime : LocalDateTime
          + DoctorTablePanel()
          + availabilityCheckPanel()
          {static} + checkAvailability()
      }
    }
  }
  

  namespace  {
    namespace UI {
      class GUI.Encryptor {
          {static} - cipher : Cipher
          {static} - key : byte[]
          {static} - secretKey : SecretKeySpec
          {static} + decryptNote()
          {static} + encryptNote()
          {static} + setKey()
          {static} ~ decryptByteArr()
          {static} ~ encryptByteArr()
      }
    }
  }
  

  namespace  {
    namespace UI {
      class GUI.HomeFrame {
          ~ addConsultButton : JButton
          ~ viewConsultButton : JButton
          ~ viewDocsButton : JButton
          + HomeFrame()
          # dynamicViewer()
          # sideMenu()
      }
    }
  }
  

  namespace  {
    namespace UI {
      class GUI.PatientFormPanel {
          {static} ~ birthdayPicker : DatePicker
          {static} ~ cardPanel : JPanel
          {static} ~ choiceCardLayout : CardLayout
          {static} ~ dateTimePicker1 : DateTimePicker
          {static} ~ dateTimePicker2 : DateTimePicker
          {static} ~ doctorDropDown1 : JComboBox
          {static} ~ doctorDropDown2 : JComboBox
          {static} ~ encryptedImgByteArray : byte[]
          {static} ~ existPatientButton : JButton
          {static} ~ mobNumF : JTextField
          {static} ~ nameF : JTextField
          {static} ~ noteArea1 : JTextArea
          {static} ~ noteArea2 : JTextArea
          {static} ~ numOfHoursSpinner1 : JSpinner
          {static} ~ numOfHoursSpinner2 : JSpinner
          {static} ~ password : String
          {static} ~ patientIdDropDown : JComboBox
          {static} ~ patientIdF : JTextField
          {static} ~ surNameF : JTextField
          + PatientFormPanel()
          {static} + backToChooser()
          {static} + checkAvailability()
          {static} + clearFields()
          {static} + duplicationChecker()
          {static} + emptyChecker()
          {static} + getCostExisting()
          {static} + getCostNew()
          {static} + getRandDoc()
          {static} + imgToByteArr()
          {static} + nameValidator()
          {static} + validateMobileNum()
          {static} + validateNewCustomer()
          {static} # newOrOldPanel()
          {static} - arrayToPanel()
          {static} - formPanelExisting()
          {static} - formPanelNew()
          {static} - fullNameArrayMakerDoc()
          {static} - submitAndClearExist()
          {static} - submitAndClearNew()
          {static} - updatePatientDropDown()
      }
    }
  }
  

  GUI.ConsultTablePanel -up-|> javax.swing.JPanel
  GUI.ConsultTablePanel o-- GUI.ConsultationTableModel : myTableModel
  GUI.ConsultationInformationViewer -up-|> javax.swing.JFrame
  GUI.ConsultationTableModel -up-|> javax.swing.table.AbstractTableModel
  GUI.DoctorTableModel -up-|> javax.swing.table.AbstractTableModel
  GUI.DoctorTablePanel -up-|> javax.swing.JPanel
  GUI.DoctorTablePanel o-- GUI.DoctorTableModel : doctorTableModel
  GUI.HomeFrame -up-|> javax.swing.JFrame
  GUI.PatientFormPanel -up-|> javax.swing.JPanel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
